--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 .button {
-    background-color: aquamarine;
+    background-color: red;
     color: white;
     padding: 15px;
     text-align: center;
